src/styling.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  overflow: auto;
  background-color: #44546a
}

body {
    background-color: #44546a;
    color: white; 
    width: 100vw;
    height: 100vh; 	
    overflow: auto
}

.button {
    background-color:#ed7d31;
    color: white;
    border-color: #ed7d31 ;
}

.button:hover {
    background-color: #8e4b1d; 
    border-color: #8e4b1d 
}
.button:disabled {
  background-color:#fad8c1;
  color: white;
  border-color: #fad8c1;
}

.title {
    color: #c7ccd2;
}

.clickedText {
  color: #ed7d31 
}

.clickedTextActive {
  color: #9bc67e 
}

.clickedText:hover {
  color: white;
  background-color: #8e4b1d; 
  border-color: #8e4b1d 
}

/* .table:hover {
  background-color:  	#293240
} */

.childstyle {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
    font-size: 16;
}

.tableElement {
  background-color: #8f98a6;
  color: white; 
  border-color: #44546a;
}

.tableElement:hover {
  background-color: #697688 ;
}

.tableElementChecked {
  background-color: #697688 ;
  color: white; 
  border-color: #44546a;
}

.textCard {
  background-color:#698ed0;
  color: white;
  border-color: #698ed0 ;
}

.textCardError {
  background-color:#CE4B61;
  color: white;
  border-color: #CE4B61 ;
}

.navbarColor {
  background-color: #222a35;
  position: sticky;
  top: 0;
  z-index: 10;

}

